main change: binning method (velocity_estimation)

--- a/src/analysis_GAS_cell_velocity_tune_clean.ipynb
+++ b/src/analysis_GAS_cell_velocity_tune_clean.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 22,
    "id": "166bde26-f252-4e9f-acd4-02b019a628be",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 23,
    "id": "e0e2b647-c196-41b4-8c89-1e8810f30871",
    "metadata": {},
    "outputs": [],
@@ -37,13 +37,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "6b5addcc-0468-4dfb-a33c-294827888648",
    "metadata": {},
    "outputs": [],
    "source": [
     "# load raw\n",
-    "raw_data_path = \"/Users/wanglab/Documents/ShengyuLi/Velocity/data/raw_data/mouse_endo_blood20to25_2000_genes_moment10.csv\"\n",
+    "raw_data_path = \"/Users/wanglab/Documents/ShengyuLi/Velocity/data/raw_data/mouse_endo_blood20to25_2000_genes_moment100.csv\"\n",
     "load_raw_data = pd.read_csv(raw_data_path)\n",
     "\n",
     "# combine detail\n",
@@ -286,6 +286,27 @@
     "plt.scatter(load_raw_data_hba.embedding1, load_raw_data_hba.embedding2,c=np.log((load_raw_data_hba.s0+0.0001).to_numpy()))\n",
     "# plt.savefig('/Users/wanglab/Documents/ShengyuLi/Velocity/data/Gastrulation/velocity_result/result_detailcsv/2000_genes/cell_level_s0/Hba-x_s0_21BP1_22BP2_23ERY1.pdf')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "d034f46f-93e2-4100-b4d8-56b863daa333",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gene_list=load_cellDancer.gene_name.drop_duplicates()\n",
+    "for i,gene in enumerate(gene_list[2000:2001]):\n",
+    "    print(str(i)+gene)\n",
+    "    vpl.velocity_gene(gene,load_cellDancer,colors=colors,mode='cluster',cluster_annot=True,cluster_info=cluster_info,point_size=30,alpha_inside=1,save_path=save_dir+gene+'.pdf')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "54744466-58ba-4050-b1ef-c8fbbb59cfee",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
