--- a/src/analysis_GAS_cell_velocity_tune_cleanV2_smooth_bin_detail.ipynb
+++ b/src/analysis_GAS_cell_velocity_tune_cleanV2_smooth_bin_detail.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "166bde26-f252-4e9f-acd4-02b019a628be",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "e0e2b647-c196-41b4-8c89-1e8810f30871",
    "metadata": {},
    "outputs": [],
@@ -37,29 +37,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "6b5addcc-0468-4dfb-a33c-294827888648",
+   "execution_count": 3,
+   "id": "7a487f87-a092-48a8-b7d0-f422c921dc54",
    "metadata": {},
    "outputs": [],
    "source": [
     "# load raw\n",
     "raw_data_path = \"/Users/wanglab/Documents/ShengyuLi/Velocity/data/raw_data/mouse_endo_blood20to25_2000_genes_moment100.csv\"\n",
     "load_raw_data = pd.read_csv(raw_data_path)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "6b5addcc-0468-4dfb-a33c-294827888648",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "not_combined_detail=False\n",
     "\n",
-    "# combine detail\n",
-    "detail_result_path = '/Users/wanglab/Documents/ShengyuLi/Velocity/data/Gastrulation/velocity_result/result_detailcsv/2000_genes_v2_smooth_bin/2000genes_with_bin_and_smooth'\n",
-    "path_name_after_no='_all_geneepoch200check_n10Lr0.001C2cf0.3Downneighbors0_200_200Ratio0.125N30OAdamtraceR0.0corrcoefR0.0nD30autoDTrueautoNTruecostTsmoothavgCWin10p3smoW0.1binTrue/detail_e200.csv'\n",
-    "load_cellDancer=pd.DataFrame()\n",
-    "for i in range(1,11):\n",
-    "    detail_path=os.path.join(detail_result_path,(str(i)+path_name_after_no))\n",
-    "    detail=pd.read_csv(detail_path)\n",
-    "    \n",
-    "    detail.rename(columns = {'Unnamed: 0':'cellIndex'}, inplace = True) # for the optimize of data_reshape\n",
-    "    detail = detail.sort_values(by = ['gene_name', 'cellIndex'], ascending = [True, True]) # for the optimize of data_reshape\n",
+    "if not_combined_detail:\n",
     "\n",
-    "    load_cellDancer=load_cellDancer.append(detail)\n",
-    "load_cellDancer=load_cellDancer.reset_index(drop=True)\n",
-    "load_cellDancer_bkup=load_cellDancer.copy()\n",
+    "    # combine detail\n",
+    "    detail_result_path = '/Users/wanglab/Documents/ShengyuLi/Velocity/data/Gastrulation/velocity_result/result_detailcsv/2000_genes_v2_smooth_bin/2000genes_with_bin_and_smooth'\n",
+    "    path_name_after_no='_all_geneepoch200check_n10Lr0.001C2cf0.3Downneighbors0_200_200Ratio0.125N30OAdamtraceR0.0corrcoefR0.0nD30autoDTrueautoNTruecostTsmoothavgCWin10p3smoW0.1binTrue/detail_e200.csv'\n",
+    "    load_cellDancer=pd.DataFrame()\n",
+    "    for i in range(1,11):\n",
+    "        detail_path=os.path.join(detail_result_path,(str(i)+path_name_after_no))\n",
+    "        detail=pd.read_csv(detail_path)\n",
+    "\n",
+    "        detail.rename(columns = {'Unnamed: 0':'cellIndex'}, inplace = True) # for the optimize of data_reshape\n",
+    "        detail = detail.sort_values(by = ['gene_name', 'cellIndex'], ascending = [True, True]) # for the optimize of data_reshape\n",
+    "\n",
+    "        load_cellDancer=load_cellDancer.append(detail)\n",
+    "    load_cellDancer=load_cellDancer.reset_index(drop=True)\n",
+    "    load_cellDancer_bkup=load_cellDancer.copy()\n",
+    "else:\n",
+    "    load_cellDancer=pd.read_csv('/Users/wanglab/Documents/ShengyuLi/Velocity/data/Gastrulation/velocity_result/result_detailcsv/2000_genes_v2_smooth_bin/2000genes_with_bin_and_smooth/combined_detail/combined_detail.csv')\n",
+    "\n",
     "\n",
     "# define output path\n",
     "output_path = '/Users/wanglab/Documents/ShengyuLi/Velocity/data/Gastrulation/velocity_result/result_detailcsv/2000_genes_v2_smooth_bin/2000genes_with_bin_and_smooth/cell_velocity'"
@@ -67,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "0cd5788b-94fa-422e-8036-bd64e9e18f1d",
    "metadata": {},
    "outputs": [
@@ -102,6 +118,10 @@
        "      <th>beta</th>\n",
        "      <th>gamma</th>\n",
        "      <th>cost</th>\n",
+       "      <th>clusters</th>\n",
+       "      <th>cellID</th>\n",
+       "      <th>embedding1</th>\n",
+       "      <th>embedding2</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -117,6 +137,10 @@
        "      <td>0.022612</td>\n",
        "      <td>0.005908</td>\n",
        "      <td>0.087183</td>\n",
+       "      <td>Blood progenitors 2</td>\n",
+       "      <td>cell_363</td>\n",
+       "      <td>3.460521</td>\n",
+       "      <td>15.574629</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -130,6 +154,10 @@
        "      <td>0.022650</td>\n",
        "      <td>0.005876</td>\n",
        "      <td>0.087183</td>\n",
+       "      <td>Blood progenitors 2</td>\n",
+       "      <td>cell_382</td>\n",
+       "      <td>2.490433</td>\n",
+       "      <td>14.971734</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -143,6 +171,10 @@
        "      <td>0.022751</td>\n",
        "      <td>0.005787</td>\n",
        "      <td>0.087183</td>\n",
+       "      <td>Blood progenitors 2</td>\n",
+       "      <td>cell_385</td>\n",
+       "      <td>2.351203</td>\n",
+       "      <td>15.267069</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -156,6 +188,10 @@
        "      <td>0.022495</td>\n",
        "      <td>0.006009</td>\n",
        "      <td>0.087183</td>\n",
+       "      <td>Blood progenitors 2</td>\n",
+       "      <td>cell_393</td>\n",
+       "      <td>5.899098</td>\n",
+       "      <td>14.388825</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -169,9 +205,17 @@
        "      <td>0.022449</td>\n",
        "      <td>0.006049</td>\n",
        "      <td>0.087183</td>\n",
+       "      <td>Blood progenitors 2</td>\n",
+       "      <td>cell_398</td>\n",
+       "      <td>4.823139</td>\n",
+       "      <td>15.374831</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -195,6 +239,10 @@
        "      <td>0.101278</td>\n",
        "      <td>0.144163</td>\n",
        "      <td>0.126370</td>\n",
+       "      <td>Erythroid3</td>\n",
+       "      <td>cell_139318</td>\n",
+       "      <td>8.032358</td>\n",
+       "      <td>7.603037</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>24657996</th>\n",
@@ -208,6 +256,10 @@
        "      <td>0.100651</td>\n",
        "      <td>0.142879</td>\n",
        "      <td>0.126370</td>\n",
+       "      <td>Erythroid3</td>\n",
+       "      <td>cell_139321</td>\n",
+       "      <td>10.352904</td>\n",
+       "      <td>6.446736</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>24657997</th>\n",
@@ -221,6 +273,10 @@
        "      <td>0.100769</td>\n",
        "      <td>0.143180</td>\n",
        "      <td>0.126370</td>\n",
+       "      <td>Erythroid3</td>\n",
+       "      <td>cell_139326</td>\n",
+       "      <td>9.464873</td>\n",
+       "      <td>7.261099</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>24657998</th>\n",
@@ -234,6 +290,10 @@
        "      <td>0.100769</td>\n",
        "      <td>0.143180</td>\n",
        "      <td>0.126370</td>\n",
+       "      <td>Erythroid3</td>\n",
+       "      <td>cell_139327</td>\n",
+       "      <td>9.990495</td>\n",
+       "      <td>7.243880</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>24657999</th>\n",
@@ -247,10 +307,14 @@
        "      <td>0.100709</td>\n",
        "      <td>0.143022</td>\n",
        "      <td>0.126370</td>\n",
+       "      <td>Erythroid3</td>\n",
+       "      <td>cell_139330</td>\n",
+       "      <td>8.260699</td>\n",
+       "      <td>7.935455</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>24658000 rows × 10 columns</p>\n",
+       "<p>24658000 rows × 14 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -267,23 +331,36 @@
        "24657998      12327          Zrsr2  0.236227  0.052799  0.361591  0.038445   \n",
        "24657999      12328          Zrsr2  0.234467  0.057909  0.372997  0.042155   \n",
        "\n",
-       "             alpha      beta     gamma      cost  \n",
-       "0         0.001560  0.022612  0.005908  0.087183  \n",
-       "1         0.001522  0.022650  0.005876  0.087183  \n",
-       "2         0.001426  0.022751  0.005787  0.087183  \n",
-       "3         0.001682  0.022495  0.006009  0.087183  \n",
-       "4         0.001732  0.022449  0.006049  0.087183  \n",
-       "...            ...       ...       ...       ...  \n",
-       "24657995  0.005919  0.101278  0.144163  0.126370  \n",
-       "24657996  0.008434  0.100651  0.142879  0.126370  \n",
-       "24657997  0.008174  0.100769  0.143180  0.126370  \n",
-       "24657998  0.008380  0.100769  0.143180  0.126370  \n",
-       "24657999  0.008959  0.100709  0.143022  0.126370  \n",
+       "             alpha      beta     gamma      cost             clusters  \\\n",
+       "0         0.001560  0.022612  0.005908  0.087183  Blood progenitors 2   \n",
+       "1         0.001522  0.022650  0.005876  0.087183  Blood progenitors 2   \n",
+       "2         0.001426  0.022751  0.005787  0.087183  Blood progenitors 2   \n",
+       "3         0.001682  0.022495  0.006009  0.087183  Blood progenitors 2   \n",
+       "4         0.001732  0.022449  0.006049  0.087183  Blood progenitors 2   \n",
+       "...            ...       ...       ...       ...                  ...   \n",
+       "24657995  0.005919  0.101278  0.144163  0.126370           Erythroid3   \n",
+       "24657996  0.008434  0.100651  0.142879  0.126370           Erythroid3   \n",
+       "24657997  0.008174  0.100769  0.143180  0.126370           Erythroid3   \n",
+       "24657998  0.008380  0.100769  0.143180  0.126370           Erythroid3   \n",
+       "24657999  0.008959  0.100709  0.143022  0.126370           Erythroid3   \n",
        "\n",
-       "[24658000 rows x 10 columns]"
+       "               cellID  embedding1  embedding2  \n",
+       "0            cell_363    3.460521   15.574629  \n",
+       "1            cell_382    2.490433   14.971734  \n",
+       "2            cell_385    2.351203   15.267069  \n",
+       "3            cell_393    5.899098   14.388825  \n",
+       "4            cell_398    4.823139   15.374831  \n",
+       "...               ...         ...         ...  \n",
+       "24657995  cell_139318    8.032358    7.603037  \n",
+       "24657996  cell_139321   10.352904    6.446736  \n",
+       "24657997  cell_139326    9.464873    7.261099  \n",
+       "24657998  cell_139327    9.990495    7.243880  \n",
+       "24657999  cell_139330    8.260699    7.935455  \n",
+       "\n",
+       "[24658000 rows x 14 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -294,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "id": "daf86794-ef5e-4ae3-a1db-8349c160f6b2",
    "metadata": {},
    "outputs": [],
@@ -326,6 +403,9 @@
     "                                            # vpl.velocity_cell_map(load_raw_data,load_cellDancer,n_neighbors,add_amt_gene, save_path=save_path, save_csv=True, gene_list=None, custom_xlim=None,colors=colors,step=(100,100),mode='gene')\n",
     "                                            # velocity_cell_map_umap_draft(load_raw_data_cf02_geneAmt952,load_cellDancer_cf02_geneAmt952,n_neighbors,add_amt_gene, save_path=save_path, save_csv=True, gene_list=None, custom_xlim=None,colors=colors,step=(100,100),mode=mode,pca_n_components=pca_n_components,file_name_additional_info=file_name_additional_info,umap_n=umap_n)\n",
     "                                            # try:\n",
+    "                                            #vpl.velocity_cell_map_curve_has_embedding(load_raw_data,cell_velocity_df,n_neighbors,add_amt_gene, save_path=save_path, save_csv=True, gene_list=None, colors=colors,step=(100,100),mode=mode,pca_n_components=pca_n_components,file_name_additional_info=file_name_additional_info,umap_n=umap_n,transfer_mode=transfer_mode,umap_n_components=umap_n_components,min_mass=min_mass,grid_steps=(grid_step, grid_step),custom_xlim=[-6,13],custom_ylim=[2,16],alpha_inside=0.3,use_downsampling= False)\n",
+    "\n",
+    "\n",
     "                                            vpl.velocity_cell_map_curve(load_raw_data,load_cellDancer,n_neighbors,add_amt_gene, save_path=save_path, save_csv=True, gene_list=None, colors=colors,step=(100,100),mode=mode,pca_n_components=pca_n_components,file_name_additional_info=file_name_additional_info,umap_n=umap_n,transfer_mode=transfer_mode,umap_n_components=umap_n_components,min_mass=min_mass,grid_steps=(grid_step, grid_step),custom_xlim=[-6,13],custom_ylim=[2,16],alpha_inside=0.3,use_downsampling= False)\n",
     "                                            # except:\n",
     "                                                # print(\"Exception: \"+file_name_additional_info)"
@@ -333,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "d269bde3-3ce5-4ca6-8628-3711e3dca8d8",
    "metadata": {
     "tags": []
@@ -400,9 +480,24 @@
     "\n",
     "color_list_full=[solarExtra02]\n",
     "\n",
-    "tune_cell_velocity_curve(load_raw_data,load_cellDancer)\n",
-    "\n"
+    "tune_cell_velocity_curve(load_raw_data,load_cellDancer)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f782f2d7-d40a-4ffa-ae54-9e9940e671c2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9ae391b8-ea72-407b-95a5-cae56fe6d7e1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
