--- a/src/colormap_preview.ipynb
+++ b/src/colormap_preview.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "9a0dbb7a-0d71-499c-9101-95c7cc178035",
    "metadata": {},
    "outputs": [],
@@ -24,6 +24,7 @@
     "purpleOrange_map = LinearSegmentedColormap.from_list(\"mycmap\", purpleOrange)\n",
     "fireworks3_map = LinearSegmentedColormap.from_list(\"mycmap\", fireworks3)\n",
     "#10-colors\n",
+    "from matplotlib.colors import ListedColormap, LinearSegmentedColormap\n",
     "horizon_map = LinearSegmentedColormap.from_list(\"mycmap\", horizon)\n",
     "#9-colors\n",
     "horizonExtra_map =LinearSegmentedColormap.from_list(\"mycmap\", horizonExtra)\n",
@@ -61,7 +62,37 @@
     }
    ],
    "source": [
-    "zissou2_map"
+    "zissou2_map\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "da7a4cc1-c4a2-43e0-ad75-0bc8b63b793d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['#000075',\n",
+       " '#2E00FF',\n",
+       " '#9408F7',\n",
+       " '#C729D6',\n",
+       " '#FA4AB5',\n",
+       " '#FF6A95',\n",
+       " '#FF8B74',\n",
+       " '#FFAC53',\n",
+       " '#FFCD32',\n",
+       " '#FFFF60']"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "horizon"
    ]
   },
   {
