update of analysis

--- a/analysis/analysis_GAS_embedding_umap_debug.ipynb
+++ b/analysis/analysis_GAS_embedding_umap_debug.ipynb
@@ -10,7 +10,6 @@
     "import umap\n",
     "from sklearn.datasets import load_digits\n",
     "import matplotlib.pyplot as plt\n",
-    "\n",
     "import numpy as np\n",
     "from sklearn.decomposition import PCA\n",
     "import pandas as pd\n",
@@ -18,9 +17,7 @@
     "from sklearn.neighbors import NearestNeighbors\n",
     "import matplotlib.pyplot as plt\n",
     "from sampling import sampling_embedding\n",
-    "from mpl_toolkits.mplot3d import Axes3D\n",
-    "\n",
-    "\n"
+    "from mpl_toolkits.mplot3d import Axes3D"
    ]
   },
   {
