--- a/analysis/analysis_fin_GAS_cell_level_para_plot.ipynb
+++ b/analysis/analysis_fin_GAS_cell_level_para_plot.ipynb
@@ -2,13 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "79262cbd-136c-45e6-839f-524ec7dbd603",
    "metadata": {},
    "outputs": [],
    "source": [
     "# https://github.com/velocyto-team/velocyto-notebooks/blob/master/python/DentateGyrus.ipynb\n",
+    "import sys\n",
     "\n",
+    "sys.path.append('/Users/wanglab/Documents/ShengyuLi/Velocity/bin/celldancer_polish/src')\n",
     "import pandas as pd\n",
     "from velocity_plot import velocity_plot as vpl\n",
     "import pandas as pd\n",
@@ -17,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "22574c7a-2b32-4aa2-b481-384230f7fb79",
    "metadata": {},
    "outputs": [],
@@ -34,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "0933a33f-9e58-4d1f-9e12-cad8363854c9",
    "metadata": {
     "tags": []
@@ -227,7 +229,7 @@
     "para_list=['alpha','beta','gamma','s0','u0']\n",
     "gene_choice=['Smim1','Hba-x','Snca']\n",
     "\n",
-    "#save_path=None\n",
+    "save_path=None\n",
     "\n",
     "# plot with fixed clusters\n",
     "# cluster_choice=['nIPC']\n",
