update plot function

--- a/analysis/diffusion_time_pancreas.ipynb
+++ b/analysis/diffusion_time_pancreas.ipynb
@@ -2,9 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (cell.py, line 79)",
+     "output_type": "error",
+     "traceback": [
+      "Traceback \u001b[0;36m(most recent call last)\u001b[0m:\n",
+      "  File \u001b[1;32m\"/Users/pengzhizhang/.local/lib/python3.7/site-packages/IPython/core/interactiveshell.py\"\u001b[0m, line \u001b[1;32m3457\u001b[0m, in \u001b[1;35mrun_code\u001b[0m\n    exec(code_obj, self.user_global_ns, self.user_ns)\n",
+      "  File \u001b[1;32m\"/var/folders/2p/2j0f_d_13815dk9jyzwnfl540000gp/T/ipykernel_20076/1027990147.py\"\u001b[0m, line \u001b[1;32m17\u001b[0m, in \u001b[1;35m<module>\u001b[0m\n    import cdplt\n",
+      "\u001b[0;36m  File \u001b[0;32m\"/Users/pengzhizhang/cellDancer/src/cdplt.py\"\u001b[0;36m, line \u001b[0;32m1\u001b[0;36m, in \u001b[0;35m<module>\u001b[0;36m\u001b[0m\n\u001b[0;31m    from plotting import *\u001b[0m\n",
+      "\u001b[0;36m  File \u001b[0;32m\"/Users/pengzhizhang/cellDancer/src/plotting/cell.py\"\u001b[0;36m, line \u001b[0;32m79\u001b[0m\n\u001b[0;31m    colors = some colormap\u001b[0m\n\u001b[0m                         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import glob\n",
@@ -21,7 +34,8 @@
     "# import from absolute directory\n",
     "srcdir = '/Users/pengzhizhang/cellDancer/src'\n",
     "sys.path.append(srcdir) \n",
-    "from pseudo_time import *"
+    "from pseudo_time import *\n",
+    "import cdplt"
    ]
   },
   {
