updating gas notebook: intercluster reconsolidation on

--- a/analysis/Gastrulation_main_function.ipynb
+++ b/analysis/Gastrulation_main_function.ipynb
@@ -1202,7 +1202,219 @@
    "id": "f1283a14",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#!conda install -c pyviz holoviews bokeh -y\n",
+    "import pandas as pd \n",
+    "import numpy as np\n",
+    "import os\n",
+    "import networkx as nx\n",
+    "\n",
+    "import datashader as ds\n",
+    "import datashader.transfer_functions as tf\n",
+    "from datashader.layout import forceatlas2_layout\n",
+    "from datashader.bundling import connect_edges, hammer_bundle\n",
+    "from colormap import *\n",
+    "\n",
+    "detail_result_path = '/Users/pengzhizhang/Documents/test_data/neuro/velocity_result'\n",
+    "output_path = detail_result_path\n",
+    "output_name = 'pseudo_time_neuro_combined.csv'\n",
+    "celltime = pd.read_csv(os.path.join(output_path, output_name))\n",
+    "sub_celltime = celltime[celltime['sample']]\n",
+    "\n",
+    "raw_data_path = '/Users/pengzhizhang/Documents/test_data/neuro/raw_data'\n",
+    "embedding_filename = 'denGyr_full.csv'\n",
+    "load_raw_data = pd.read_csv(os.path.join(raw_data_path, embedding_filename))\n",
+    "\n",
+    "nsamples = len(sub_celltime)\n",
+    "cellembedding = load_raw_data[load_raw_data.gene_list == \n",
+    "                          load_raw_data.gene_list[0]][['embedding1', 'embedding2', 'clusters']]\n",
+    "\n",
+    "sub_cellembedding = cellembedding[celltime['sample']]\n",
+    "sub_data = pd.concat([sub_celltime, sub_cellembedding], axis=1)\n",
+    "\n",
+    "def create_graph_KNN_based(data, n_neighbors, neighborhood_radius):\n",
+    "    from sklearn.neighbors import NearestNeighbors\n",
+    "    cell_embedding = data[['embedding1', 'embedding2']]\n",
+    "    neigh = NearestNeighbors(n_neighbors = n_neighbors, radius = neighborhood_radius)\n",
+    "    neigh.fit(cell_embedding)\n",
+    "    nn_graph = neigh.radius_neighbors_graph(cell_embedding)\n",
+    "    nn_array = nn_graph.toarray()\n",
+    "    edge_filter = np.triu(nn_array, k=1)\n",
+    "    \n",
+    "    # nn_array is effectively the edge list\n",
+    "    # Keep track of cells of 0 timeshift.\n",
+    "    ptime = data['pseudotime'].to_numpy()\n",
+    "    dtime = ptime - ptime[:,np.newaxis]\n",
+    "    \n",
+    "    INF = 1./np.min(np.abs(dtime[dtime!=0]))\n",
+    "    \n",
+    "    node_list = [(i, dict(ptime=data['pseudotime'].iloc[i], \n",
+    "                          traj_cluster=data['traj_cluster'].iloc[i],\n",
+    "                          cluster=data['clusters'].iloc[i])) for i in range(nsamples)]\n",
+    "    \n",
+    "    # upper triangle of the knn array (i<j and nn_array[i,j] = 1)\n",
+    "    (i,j) = np.where(edge_filter != 0)\n",
+    "     \n",
+    "    # for forcedirected layouts, edge length is positively correlated with weight.\n",
+    "    # hence 1/dtime here as the weight\n",
+    "    # Created for directed graph\n",
+    "    edge_list = list()\n",
+    "    for a,b,w in zip(i,j, dtime[i,j]):\n",
+    "        if w>0:\n",
+    "            edge_list.append((a, b, 1/w))\n",
+    "        elif w<0:\n",
+    "            edge_list.append((a, b, -1/w))\n",
+    "        else:\n",
+    "            #print(a,b)\n",
+    "            edge_list.append((a, b, INF))\n",
+    "            \n",
+    "    G = nx.Graph()\n",
+    "    G.add_nodes_from(node_list)\n",
+    "    G.add_weighted_edges_from(edge_list)\n",
+    "    \n",
+    "    return G\n",
+    "\n",
+    "\n",
+    "def layout_graph(data, n_neighbors, neighborhood_radius):\n",
+    "    G = create_graph_KNN_based(data, n_neighbors, neighborhood_radius)\n",
+    "    nodes = sub_data[['embedding1', 'embedding2', 'pseudotime', 'clusters']].rename(\n",
+    "        {'embedding1': 'x', 'embedding2':'y'}, axis=1)\n",
+    "    nodes.reset_index(level=0, drop=True,inplace=True)\n",
+    "    nodes['index']=range(len(nodes))\n",
+    "    \n",
+    "    \n",
+    "    # NOTE!!!\n",
+    "    # the third column has to be \"index\"\n",
+    "    nodes = nodes[['x', 'y', 'index', 'clusters', 'pseudotime']]\n",
+    "    edges = pd.DataFrame([(i[0], i[1], G.edges[i]['weight']) for i in G.edges], \n",
+    "                         columns=['source', 'target', 'weight'])\n",
+    "    \n",
+    "    forcedirected = forceatlas2_layout(nodes, edges, weight='weight', iterations=200, seed=10)\n",
+    "    fig, ax = plt.subplots(figsize=(10,10))\n",
+    "    plt.scatter(forcedirected.x, forcedirected.y, c=data['clusters'].map(colors), s = 20, zorder=2)\n",
+    "    plt.axis('off')\n",
+    "    plt.show()\n",
+    "    return forcedirected, nodes, edges\n",
+    "\n",
+    "def nodesplot(nodes, name=None, canvas=None, cat=None):\n",
+    "    canvas = ds.Canvas(**cvsopts) if canvas is None else canvas\n",
+    "    aggregator=None if cat is None else ds.count_cat(cat)\n",
+    "    agg=canvas.points(nodes,'x','y',aggregator)\n",
+    "    return tf.spread(tf.shade(agg), px=1, name=name)\n",
+    "\n",
+    "def edgesplot(edges, name=None, canvas=None):\n",
+    "    canvas = ds.Canvas(**cvsopts) if canvas is None else canvas\n",
+    "    return tf.shade(canvas.line(edges, 'x','y', agg=ds.count()), name=name)\n",
+    "    \n",
+    "def graphplot(nodes, edges, name=\"\", canvas=None, cat=None):\n",
+    "    if canvas is None:\n",
+    "        xr = nodes.x.min(), nodes.x.max()\n",
+    "        yr = nodes.y.min(), nodes.y.max()\n",
+    "        canvas = ds.Canvas(**cvsopts)\n",
+    "        \n",
+    "    np = nodesplot(nodes, name + \" nodes\", canvas, cat)\n",
+    "    ep = edgesplot(edges, name + \" edges\", canvas)\n",
+    "    return tf.stack(ep, np, how=\"over\", name=name)\n",
+    "\n",
+    "cvsopts = dict(plot_height=400, plot_width=400)\n",
+    "colors = {'CA': grove2[7],\n",
+    "        'CA1-Sub': grove2[9],\n",
+    "        'CA2-3-4': grove2[8],\n",
+    "        'Granule': grove2[6],\n",
+    "        'ImmGranule1': grove2[6],\n",
+    "        'ImmGranule2': grove2[6],\n",
+    "        'Nbl1': grove2[5],\n",
+    "        'Nbl2': grove2[5],\n",
+    "        'nIPC': grove2[4],\n",
+    "        'RadialGlia': grove2[3],\n",
+    "        'RadialGlia2': grove2[3],\n",
+    "        'GlialProg': grove2[2],\n",
+    "        'OPC': grove2[1],\n",
+    "        'ImmAstro': grove2[0]}\n",
+    "\n",
+    "forcedirected, nodes, edges = layout_graph(sub_data, 10, 5)\n",
+    "\n",
+    "# %% [markdown]\n",
+    "# # Add edges\n",
+    "# # origin\n",
+    "\n",
+    "# %%\n",
+    "fd_d = graphplot(forcedirected, connect_edges(forcedirected,edges), \"Force-directed\")\n",
+    "fd_b = graphplot(forcedirected, hammer_bundle(forcedirected,edges), \"Force-directed, bundled\") \n",
+    "\n",
+    "tf.Images(fd_d,fd_b).cols(2)\n",
+    "\n",
+    "# %%\n",
+    "all_data = pd.concat([celltime, cellembedding], axis=1)\n",
+    "\n",
+    "# Caution: this roughly takes 20+ minutes for 18140 cells.\n",
+    "forcedirected_all, nodes_all, edges_all = layout_graph(all_data, 10, 5)\n",
+    "\n",
+    "# %%\n",
+    "tf.Images(nodesplot(forcedirected_all, \"ForceAtlas2 layout\"))\n",
+    "\n",
+    "# %%\n",
+    "fig, ax = plt.subplots(figsize=(10,10))\n",
+    "#plt.plot(HB.x, HB.y, lw=0.1, c='lightblue', alpha = 1, zorder=1)\n",
+    "plt.scatter(forcedirected_all.x, forcedirected_all.y, c=all_data['clusters'].map(colors), s = 20, zorder=2)\n",
+    "plt.axis('off')\n",
+    "plt.show()\n",
+    "\n",
+    "# %%\n",
+    "colors = {'CA': grove2[7],\n",
+    "        'CA1-Sub': grove2[9],\n",
+    "        'CA2-3-4': grove2[8],\n",
+    "        'Granule': grove2[6],\n",
+    "        'ImmGranule1': grove2[6],\n",
+    "        'ImmGranule2': grove2[6],\n",
+    "        'Nbl1': grove2[5],\n",
+    "        'Nbl2': grove2[5],\n",
+    "        'nIPC': grove2[4],\n",
+    "        'RadialGlia': grove2[3],\n",
+    "        'RadialGlia2': grove2[3],\n",
+    "        'GlialProg': grove2[2],\n",
+    "        'OPC': grove2[1],\n",
+    "        'ImmAstro': grove2[0]}\n",
+    "colormap = list(sub_data['clusters'].map(colors))\n",
+    "\n",
+    "# %%\n",
+    "import holoviews as hv\n",
+    "from holoviews import opts\n",
+    "hv.extension('bokeh')\n",
+    "\n",
+    "kwargs = dict(width=1000, height=1000, xaxis=None, yaxis=None)\n",
+    "opts.defaults(opts.Nodes(**kwargs), opts.Graph(**kwargs))\n",
+    "\n",
+    "# %%\n",
+    "from holoviews.element.graphs import layout_nodes\n",
+    "layout_nodes(_graph, layout=nx.spring_layout, \n",
+    "             kwargs={'weight':'weight', 'iterations':200, 'seed':100})\n",
+    "\n",
+    "# %%\n",
+    "graph = hv.Graph((edges, forcedirected), label=\"neuro cell velocity\")\n",
+    "graph.opts(node_size=3, edge_line_width=0.1,\n",
+    "            node_line_color='gray', \n",
+    "            cmap=colors, node_color='clusters',\n",
+    "            edge_alpha=0.1, node_alpha=1)\n",
+    "\n",
+    "# %%\n",
+    "%%time \n",
+    "from holoviews.operation.datashader import datashade, bundle_graph\n",
+    "bundled = bundle_graph(graph)\n",
+    "bundled\n",
+    "\n",
+    "# %%\n",
+    "overlay = datashade(bundled, width=800, height=800) * bundled.select(pseudotime=(0,0.05))\n",
+    "overlay.opts(opts.Graph(node_size=10))\n",
+    "\n",
+    "# %%\n",
+    "from bokeh.plotting import figure, output_notebook,reset_output, show\n",
+    "from bokeh.models import ColumnDataSource, Arrow, OpenHead, NormalHead, VeeHead\n",
+    "\n",
+    "cds = ColumnDataSource(data=dict(x_start=[0,1, 2], y_start=[0,1, 2], x_end=[1,3, 5], y_end=[0,5, 8], line_width=[1]*3, color=['red','blue','yellow']))\n",
+    "arr = Arrow(end=NormalHead(), source=cds, line_color='color', line_width='line_width', x_start='x_start', y_start='y_start', x_end='x_end', y_end='y_end')\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
