--- a/analysis/import_note.ipynb
+++ b/analysis/import_note.ipynb
@@ -15,10 +15,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "installed=False\n",
     "import sys\n",
-    "#srcdir = '/Users/pengzhizhang/cellDancer/src'\n",
-    "srcdir = '/Users/shengyuli/Library/CloudStorage/OneDrive-HoustonMethodist/work/Velocity/bin/cellDancer_polish/src'\n",
-    "sys.path.append(srcdir)"
+    "if not installed:\n",
+    "    #srcdir = '/Users/pengzhizhang/cellDancer/src'\n",
+    "    srcdir = '/Users/shengyuli/Library/CloudStorage/OneDrive-HoustonMethodist/work/Velocity/bin/cellDancer_polish/src'\n",
+    "    sys.path.append(srcdir)"
    ]
   },
   {
@@ -60,8 +62,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "9fe85f26-a4f5-4da4-bd3d-5ef1634a14f1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "not False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cfbb8d8c-d0a1-4a61-be38-b6f1605d3a75",
    "metadata": {},
    "outputs": [],
    "source": []
