--- a/analysis/import_note.ipynb
+++ b/analysis/import_note.ipynb
@@ -1,23 +1,15 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "id": "997cfb9f-8ae7-49df-a70f-e293da23449c",
-   "metadata": {},
-   "source": [
-    "# Pancreas_main_function_pre_sl.ipynb"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "85e6b2e6-6e2d-4112-930c-73550086f9ad",
    "metadata": {},
    "outputs": [],
    "source": [
-    "installed=False\n",
+    "development_mode=True\n",
     "import sys\n",
-    "if not installed:\n",
+    "if development_mode:\n",
     "    #srcdir = '/Users/pengzhizhang/cellDancer/src'\n",
     "    srcdir = '/Users/shengyuli/Library/CloudStorage/OneDrive-HoustonMethodist/work/Velocity/bin/cellDancer_polish/src'\n",
     "    sys.path.append(srcdir)"
@@ -62,24 +54,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "9fe85f26-a4f5-4da4-bd3d-5ef1634a14f1",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "not False"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
