--- a/analysis/import_note.ipynb
+++ b/analysis/import_note.ipynb
@@ -54,11 +54,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "9fe85f26-a4f5-4da4-bd3d-5ef1634a14f1",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<function celldancer.plotting.cell.plot_para_umap(para, load_cellDancer, gene_name=None, umap_n=25, cluster_map=None, save_path=None, title=None, legend_annotation=False)>"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cdplt.cell.plot_para_umap"
+   ]
   },
   {
    "cell_type": "code",
