--- a/analysis/Gastrulation_main_function-Copy2.ipynb
+++ b/analysis/Gastrulation_main_function-Copy2.ipynb
@@ -208,7 +208,9 @@
   {
    "cell_type": "markdown",
    "id": "93ab2096",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "## Set Parameters"
    ]
