--- a/analysis/Pancreas_main_function_pre_sl.ipynb
+++ b/analysis/Pancreas_main_function_pre_sl.ipynb
@@ -805,7 +805,9 @@
   {
    "cell_type": "markdown",
    "id": "f4ea6336-6b57-404c-a83c-bb00bd66760e",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "## Estimate pseudotime"
    ]
