velocity_estimation_debug_norm

--- a/analysis/PAN_sl/Pancreas_main_function_pre_sl.ipynb
+++ b/analysis/PAN_sl/Pancreas_main_function_pre_sl.ipynb
@@ -1717,7 +1717,9 @@
   {
    "cell_type": "markdown",
    "id": "5898dfbb-7696-4a5c-8280-27bf8d75ef4e",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "## UMAP using alpha, beta, and gamma"
    ]
@@ -1726,7 +1728,9 @@
    "cell_type": "code",
    "execution_count": 18,
    "id": "2f72db34-7caa-442f-ab87-2944ae319dc0",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
